# kimi_proxy

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  README.md  README_DEV.md  cline_mcp_settings.json  config.toml  config.toml.backup.20260220_101102  config.toml.minimal  config.yaml  config_backup.yaml  config_continue_optimisé.yaml  jest.config.js  load-env.sh  main.py  mcp_config.json  package.json  pytest.ini  requirements-dev.txt  requirements.txt  sessions.db.backup.20260215_134753  setup.py  start-mcp.sh  start.sh  stop.sh  system.md  tailwind.config.js  test-prd.txt  test_async_fix.py
.agents/rules/: codingstandards.md  memorybankprotocol.md  prompt-injection-guard.md  skills-integration.md  v5.md
.agents/skills/: README.md
.agents/workflows/: commit-push.md  docs-updater.md  end.md  enhance.md
.cline/skills/: USAGE.md
.clinerules/: codingstandards.md  commit-message-format.md  dev_workflow.md  memorybankprotocol.md  skills-integration.md  taskmaster.md  test-strategy.md  v5.md
.clinerules/workflows/: commit-push.md  docs-updater.md  end.md  enhance.md
.continue/prompts/: commit-push.md  docs-updater.md  end.md  enhance.md  enhance_complex.md
.continue/rules/: clean-api-router-structure.md  codingstandards.md  commit-message-format.md  debugging-strategies.md  documentation.md  kimi-proxy-config-manager.md  kimi-proxy-frontend-architecture.md  kimi-proxy-mcp-integration.md  kimi-proxy-performance-optimization.md  kimi-proxy-streaming-debug.md  kimi-proxy-testing-strategies.md  memorybankprotocol.md  prompt-injection-guard.md  shrimp-task-manager.md  taskmaster.md  (+3 more)
.sixthrules/: 01-codingstandards.md
.taskmaster/: config.json  state.json
.windsurf/: mcp.json
.zencoder/: mcp.local.json
docs/: CEFSourceOktYWc.md  README.md  summarize-task.md
examples/: architecture-diagram.md  migration-example-tokens.py
mcp/servers/context-compression-mcp-server/: LICENSE  README.md  example_mcp_config.json  example_usage.py  pyproject.toml  server.py  test_installation.py
mcp/servers/context-compression-mcp-server/.kiro/specs/context-compression-mcp/: requirements.md
mcp/servers/context-compression-mcp-server/.kiro/specs/mcp-tags-parameter-fix/: design.md  requirements.md
mcp/servers/context-compression-mcp-server/src/: __init__.py  context_manager.py
mcp/servers/context-compression-mcp-server/tests/: test_compression.py  test_database.py  test_mcp_server.py  test_performance.py  test_store_context_integration.py  test_update_context_integration.py
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
scripts/: backup.sh  bench_observation_masking_schema1.py  deploy_async_fix.sh  diagnose-mcp.sh  mcp_bridge.py  migrate-to-modular.sh  migrate.sh  migrate_compaction.sh  migrate_compaction.sql  monitor_async_warnings.py  start-mcp-servers.sh  start-systemd.sh  start.sh  stop.sh  test_dashboard.sh
static/: index.html  memory-section.html
tests/: conftest.py  pytest.ini  run_mcp_tests.py  run_mcp_tests_quick.sh  test_auto_session_model.py  test_mcp_phase3.py
(+535 files in other folders)
